--- a/charts/one37id-ibm-agent-db/templates/pvc-resources.yaml
+++ b/charts/one37id-ibm-agent-db/templates/pvc-resources.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   accessModes:
 {{ toYaml .Values.resourceVolume.accessModes | indent 4 }}
-  storageClassName: {{ .Values.resourceVolume.storageClass }}
+  storageClassName: {{ .Values.volumes.storageClass }}
   resources:
     requests:
       storage: {{ .Values.resourceVolume.size }}
