--- a/charts/one37id-ibm-agent-db/templates/deployment.yaml
+++ b/charts/one37id-ibm-agent-db/templates/deployment.yaml
@@ -88,17 +88,12 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-          - name: {{ $fullName}}-{{ .Values.resourceVolume.name }}
-            mountPath: {{ .Values.resourceVolume.mountPath }}
-          - name: {{ $fullName}}-{{ .Values.workflowVolume.name }}
-            mountPath: {{ .Values.workflowVolume.mountPath }}
+          - name: {{ $fullName}}-{{ .Values.volume.name }}
+            mountPath: {{ .Values.volume.mountPath }}
       volumes:
-        - name: {{ $fullName}}-{{ .Values.resourceVolume.name }}
+        - name: {{ $fullName}}-{{ .Values.volume.name }}
           persistentVolumeClaim:
-            claimName: {{ $fullName}}-{{ .Values.resourceVolume.name }}
-        - name: {{ $fullName}}-{{ .Values.workflowVolume.name }}
-          persistentVolumeClaim:
-            claimName: {{ $fullName}}-{{ .Values.workflowVolume.name }}
+            claimName: {{ $fullName}}-{{ .Values.volume.name }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
