--- a/charts/one37id-ibm-agent/templates/deployment.yaml
+++ b/charts/one37id-ibm-agent/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- $fullName := include "one37id-ibm-agent-db.fullname" . -}}
+{{- $fullName := include "one37id-ibm-agent.fullname" . -}}
 {{- $postgresSecretName := printf "%s" .Values.secrets.postgresSecretName | trunc 63 | trimSuffix "-" -}}
 {{- $redisSecretName := printf "%s" .Values.secrets.redisSecretName | trunc 63 | trimSuffix "-" -}}
 apiVersion: apps/v1
@@ -6,14 +6,14 @@ kind: Deployment
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "one37id-ibm-agent-db.labels" . | nindent 4 }}
+    {{- include "one37id-ibm-agent.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "one37id-ibm-agent-db.selectorLabels" . | nindent 6 }}
+      {{- include "one37id-ibm-agent.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -21,11 +21,11 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "one37id-ibm-agent-db.selectorLabels" . | nindent 8 }}
+        {{- include "one37id-ibm-agent.selectorLabels" . | nindent 8 }}
     spec:
       imagePullSecrets:
         - name: {{ .Values.one37secrets.fullnameOverride }}
-      serviceAccountName: {{ include "one37id-ibm-agent-db.serviceAccountName" . }}
+      serviceAccountName: {{ include "one37id-ibm-agent.serviceAccountName" . }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       restartPolicy: Always
       containers:
