--- a/charts/one37id-ibm-agent/templates/configmap.yaml
+++ b/charts/one37id-ibm-agent/templates/configmap.yaml
@@ -1,9 +1,14 @@
-{{- $fullName := include "one37id-ibm-agent-db.fullname" . -}}
+{{- $fullName := include "one37id-ibm-agent.fullname" . -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ $fullName }}
 data:
+  REDIS_HOST: {{ .Values.redisName }}-master
+  REDIS_PORT: 6379
+  PG_HOST: {{ .Values.postgresName }}
+  PG_PORT: 5432
+  PG_CONNECTION: {{ .Values.postgresName }}:5432
   PG_DBNAME: {{ $fullName }}_agent_db
   WALLET_PG_DBNAME: {{ $fullName }}_wallet_db
   WORKFLOW_PG_DBNAME: {{ $fullName }}_workflow_db
