--- a/charts/one37id-ibm-agent/templates/ingress.yaml
+++ b/charts/one37id-ibm-agent/templates/ingress.yaml
@@ -1,6 +1,6 @@
-{{- if .Values.ingress.enabled }}
-{{- $fullName := include "one37id-ibm-agent-db.fullname" . -}}
-{{- $annotate := .Values.ingress.annotations -}}
+{{- if .Values.ingress.enabled -}}
+{{- $fullName := include "one37id-ibm-agent.fullname" . -}}
+{{- $svcPort := .Values.service.port -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
@@ -16,14 +16,12 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "one37id-ibm-agent-db.labels" . | nindent 4 }}
+    {{- include "one37id-ibm-agent.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-
 spec:
   {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.ingress.className }}
@@ -35,7 +33,7 @@ spec:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
-      secretName: {{ .secretname }}
+      secretName: {{ .secretName }}
     {{- end }}
   {{- end }}
   rules:
