--- a/charts/one37id-ibm-agent/templates/pvc.yaml
+++ b/charts/one37id-ibm-agent/templates/pvc.yaml
@@ -1,4 +1,4 @@
-{{- $fullName := include "one37id-ibm-agent-db.fullname" . -}}
+{{- $fullName := include "one37id-ibm-agent.fullname" . -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
