--- a/charts/one37id-ibm-agent/templates/secrets.yaml
+++ b/charts/one37id-ibm-agent/templates/secrets.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.secrets.create }}
-{{- $fullName := include "one37id-ibm-agent-db.fullname" . -}}
+{{- $fullName := include "one37id-ibm-agent.fullname" . -}}
 apiVersion: v1
 kind: Secret
 metadata:
