--- a/charts/one37id-ibm-agent/templates/service.yaml
+++ b/charts/one37id-ibm-agent/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "one37id-ibm-agent-db.fullname" . }}
+  name: {{ include "one37id-ibm-agent.fullname" . }}
   labels:
-    {{- include "one37id-ibm-agent-db.labels" . | nindent 4 }}
+    {{- include "one37id-ibm-agent.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -14,4 +14,4 @@ spec:
       name: {{ $key}}
     {{- end }}
   selector:
-    {{- include "one37id-ibm-agent-db.selectorLabels" . | nindent 4 }}
+    {{- include "one37id-ibm-agent.selectorLabels" . | nindent 4 }}
