--- a/charts/one37id-ibm-agent/templates/ingress.yaml
+++ b/charts/one37id-ibm-agent/templates/ingress.yaml
@@ -1,6 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "one37id-ibm-agent.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
+{{- $tlsSecret := .Values.tlsSecret -}}
+{{- $agentHostname := .Values.agentHostname -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
@@ -31,14 +32,14 @@ spec:
     {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
-        - {{ . | quote }}
+        - {{ $agentHostname | quote }}
         {{- end }}
-      secretName: {{ .secretName }}
+      secretName: {{ $tlsSecret }}
     {{- end }}
   {{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ $agentHostname | quote }}
       http:
         paths:
           {{- range .paths }}
