--- a/charts/one37id-ibm-agent/values.yaml
+++ b/charts/one37id-ibm-agent/values.yaml
@@ -12,6 +12,8 @@ fullnameOverride: one37id-ibm-agent
 
 postgresName: one37id-pgsql
 redisName: one37id-redis
+tlsSecret: one37id-tls-dev
+agentHostname: ibm-agent.dev-one37.id
 
 # Enable this if you want have liveness and readiness probes
 liveCheck: false
@@ -38,7 +40,7 @@ ingress:
     kubernetes.io/ingress.class: public-iks-k8s-nginx  # Only use this for IBM Cloud
     proxybodysize: "50m"
   hosts:
-    - host: ibm-agent.dev-one37.id
+    - host: agentHostName
       paths:
         - path: /bc/studio
           pathType: Prefix
@@ -59,9 +61,9 @@ ingress:
           pathType: Prefix
           port: 8081
   tls:
-    - secretName: one37id-tls-dev
+    - secretName: tlsSecret
       hosts:
-        - ibm-agent.dev-one37.id
+        - agentHostname
 
 configmap:
   ASPNETCORE_ENVIRONMENT: "Development"
