--- a/charts/one37id-ibm-studio/templates/configmap.yaml
+++ b/charts/one37id-ibm-studio/templates/configmap.yaml
@@ -3,12 +3,8 @@
 {{- $svcPort := .Values.service.port -}}
 {{- $svcRoot := printf "%s:%v" "http://0.0.0.0" .Values.service.port -}}
 
-{{- $pgHost := "" -}}
-{{- if .Values.postgresql.enabled }}
-  {{- $pgHost = .Values.postgresql.fullnameOverride -}}
-{{- else -}}
-  {{- $pgHost = .Values.existingDBHost -}}
-{{- end }}
+{{- $pgPort := "5432" -}}
+{{- $pgConnection := printf "%s:%s" .Values.postgresName $pgPort -}}
 
 apiVersion: v1
 kind: ConfigMap
@@ -16,7 +12,7 @@ metadata:
   name: {{ $fullName }}
 data:
   SERVICE_ROOT: {{ $svcRoot | quote }}
-  STUDIO_PG_HOST: {{ $pgHost | quote }}
+  STUDIO_PG_HOST: {{ .Values.postgresName | quote }}
   STUDIO_PG_PORT: "5432"
   STUDIO_PG_DBNAME: {{ $justName }}-db
 
