--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: just-the-docs
 title: 'One37 Solutions Helm Charts'
 subtitle: 'Repository for IBM Cloud Catalog'
+url: https://one37id.github.io/helm-ibm/
