--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: just-the-docs
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: 'One37 Solutions Helm Charts'
 subtitle: 'Repository for IBM Cloud Catalog'
 url: https://one37id.github.io/helm-ibm/
