--- a/charts/one37id-redis/Chart.yaml
+++ b/charts/one37id-redis/Chart.yaml
@@ -12,9 +12,9 @@ dependencies:
     repository: oci://registry-1.docker.io/bitnamicharts
     tags:
     - redis
-    version: 18.x.x
+    version: latest
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: "1.2310.12-1"
-version: 1.2310.12-1
+appVersion: "1.2404.18-1"
+version: 1.2404.18-1
