delete pvc after uninstall

--- a/charts/one37id-pgsql/values.yaml
+++ b/charts/one37id-pgsql/values.yaml
@@ -9,6 +9,9 @@ postgresql:
   primary:
     persistence:
       size: 20Gi
+      persistentVolumeClaimRetentionPolicy:
+        enabled: true
+        whenDeleted: Delete
   backup:
     enabled: true
     persistence:
