--- a/charts/one37id-redis/values.yaml
+++ b/charts/one37id-redis/values.yaml
@@ -7,6 +7,10 @@ redis:
   master:
     persistence:
       size: 10Gi
+      persistentVolumeClaimRetentionPolicy:
+        enabled: true
+        whenScaled: Retain
+        whenDeleted: Delete
   replica:
     replicaCount: 1
     persistence:
