--- a/charts/one37id-ibm-agent/templates/ingress.yaml
+++ b/charts/one37id-ibm-agent/templates/ingress.yaml
@@ -39,7 +39,7 @@ spec:
   {{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
-    - host: {{ $agentHostname | quote }}
+    - host: {{ .host | quote }}
       http:
         paths:
           {{- range .paths }}
