--- a/charts/one37id-ibm-agent/Chart.yaml
+++ b/charts/one37id-ibm-agent/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: one37id-ibm-agent
 type: application
-description: A Helm chart to deploy the One37 Business Connector Agent
+description: A Helm chart to deploy the One37 Business Connector Controller .Net
 home: https://one37id.com
 icon: https://www.one37id.com/images/connector.svg
 annotations:
@@ -16,7 +16,7 @@ dependencies:
 keywords:
   - businessconnector
   - ssi
-  - aries
+  - oid4vc
   - agent
   - one37id
   - one37
@@ -24,5 +24,5 @@ keywords:
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: "1.2310.13-4"
-version: 1.2310.13-4
+appVersion: "1.2408.14-1"
+version: 1.2408.14-1
